--- a/package.json
+++ b/package.json
@@ -11,21 +11,34 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "~12.2.0",
+    "@angular/cdk": "^12.2.10",
     "@angular/common": "~12.2.0",
     "@angular/compiler": "~12.2.0",
     "@angular/core": "~12.2.0",
     "@angular/forms": "~12.2.0",
+    "@angular/material": "^12.2.10",
     "@angular/platform-browser": "~12.2.0",
     "@angular/platform-browser-dynamic": "~12.2.0",
     "@angular/router": "~12.2.0",
+    "@igniteui/material-icons-extended": "^2.8.0",
+    "@juggle/resize-observer": "^3.3.0",
+    "@syncfusion/ej2-angular-lists": "^19.3.45",
+    "classlist.js": "1.1.20150312",
+    "hammerjs": "^2.0.8",
+    "igniteui-angular": "^12.2.2",
+    "jszip": "^3.6.0",
+    "minireset.css": "~0.0.4",
     "rxjs": "~6.6.0",
     "tslib": "^2.3.0",
+    "web-animations-js": "^2.3.2",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~12.2.7",
     "@angular/cli": "~12.2.7",
     "@angular/compiler-cli": "~12.2.0",
+    "@igniteui/angular-schematics": "~12.2.820",
+    "@types/hammerjs": "^2.0.40",
     "@types/jasmine": "~3.8.0",
     "@types/node": "^12.11.1",
     "jasmine-core": "~3.8.0",
